--- a/style.css
+++ b/style.css
@@ -2,20 +2,79 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans',
+    sans-serif;
 }
 
 body {
-    background-color: aliceblue;
-}
-
-nav, header, section, footer {
-    border: 2px solid black;
+    background-color: #eeeeee;
 }
 
 header, section {
-    height: 800px;
+    height: 600px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3E517A;
+    color: #eeeeee;
+    height: 70px;
+    padding: 0 30px;
+}
+
+nav ul {
+    display: flex;
+    width: 300px;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+nav ul li:hover {
+    color: #fe938c;
+}
+
+.logo {
+    font-style: bold;
+    font-size: 24px;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("https://thumbs.gfycat.com/EquatorialSevereAzurewingedmagpie-size_restricted.gif");
+    background-size: cover;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+section:first-of-type {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #fe938c;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 270px;
+    height: 400px;
+    background-color: #eeeeee;
+    text-align: center;
+    -webkit-box-shadow: 10px 11px 15px -6px rgba(51, 51, 51, 1);
+    -moz-box-shadow: 10px 11px 15px -6px rgba(51, 51, 51, 1);
+    box-shadow: 10px 11px 15px -6px rgba(51, 51, 51, 1);
+    border-radius: 2px;
 }
 
 footer {
     height: 200px;
+    background-color: #333333;
 }
